# DeepLearningTest2

./: .gitignore  main.py  pyproject.toml  run_all_night.sh  run_feat_ablation.sh  run_remaining.sh  status.txt
plans/: README.md
plans/checkpoints_archive/: BTCUSDT_results.json  BTCUSDT_results_layernorm_sharpe_fullseq_dm100d_s42.json  BTCUSDT_results_layernorm_sharpe_fullseq_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_dmp100d_tc10_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_dmp100d_tc12_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_dmp100d_tc16_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_dmp100d_tc5_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_dmp100d_tc7_h32_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_dmp100d_tc7_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_feat_basis_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_feat_imbalance_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_feat_ret_basis_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_feat_ret_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_feat_ret_vol_volume_basis_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_feat_ret_vol_volume_imbalance_s42.json  BTCUSDT_results_lstm_nobias_sharpe_fullseq_dm100d_feat_ret_vol_volume_s42.json  BTCUSDT_results_mv_l1.json  (+12 more)
scripts/: BasisSignalTest.ipynb  TestLSTM.ipynb  build_features.py  check_klines_quality.py  compare_losses.py  download_binance_vision_klines.py  profile_epoch.py  train.py  train_old_gpu.py
